--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ a {
 }
 
 .brand-container:hover {
-    background-color: var(--blue);
+    background-color: hsl(223, 91%, 68%);
     color: #fff;
 }
 
@@ -132,9 +132,69 @@ a {
     color: var(--gray);
 }
 
+.errorBorder {
+    box-shadow: inset 0 0 0 2px var(--light-red);
+}
+
+.errorBorder:focus {
+    box-shadow: inset 0 0 0 2px var(--light-red);
+}
+
 @media (min-width: 720px) {
     body {
         min-height: initial;
-        height: 800px;
+        height: 1024px;
+        font-size: 20px;
+        padding: 88px 400px 50px;
+    }
+
+    .logo {
+        padding: 0 235px;
+        margin-bottom: 55px;
+    }
+
+    .title {
+        font-size: 45px;
+    }
+
+    .subtitle {
+        margin-bottom: 30px;
+    }
+
+    .form {
+        padding: 0;
+        margin-bottom: 72px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 20px;
+        row-gap: 10px;
+    }
+
+    .form-email {
+        flex-grow: 1;
+        padding: 22px 0;
+        padding-left: 45px;
+        margin-bottom: 0;
+    }
+
+    .form-error {
+        margin-bottom: 0;
+        padding-left: 45px;
+        font-size: 16px;
+        order: 1;
+        margin-top: 10px;
+    }
+
+    .form-submit {
+        padding: 22px 65px;
+    }
+
+    .form-submit:hover {
+        background-color: hsl(223, 91%, 68%);
+        cursor: pointer;
+    }
+
+    .footer-brands {
+        font-size: 22px;
     }
 }
