--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,15 @@ a {
     box-shadow: inset 0 0 0 2px var(--light-red);
 }
 
+figure {
+    width: 100%;
+    line-height: 1;
+}
+
+.illustration {
+    width: 100%;
+}
+
 @media (min-width: 720px) {
     body {
         min-height: initial;
